feature: <legal-expenses> se agrega módulo para gestionar gastos legales
